--- a/resources/templates/provision/fanvil/x210/{$mac}.cfg
+++ b/resources/templates/provision/fanvil/x210/{$mac}.cfg
@@ -3642,14 +3642,14 @@
             <TalkingSoftkey>{if isset($fanvil_softkey_talkingsoftkey)}{$fanvil_softkey_talkingsoftkey}{else}hold;xfer;conf;end;{/if}</TalkingSoftkey>
             <RingingSoftkey>{if isset($fanvil_softkey_ringingsoftkey)}{$fanvil_softkey_ringingsoftkey}{else}accept;none;forward;reject;{/if}</RingingSoftkey>
             <AlertingSoftkey>end;none;none;none;</AlertingSoftkey>
-            <XAlertingSoftkey>end;none;none;none;</XAlertingSoftkey>
+            <XAlertingSoftkey>end;none;none;xfer;</XAlertingSoftkey>
             <ConferenceSoftkey>hold;none;split;end;</ConferenceSoftkey>
-            <WaitingSoftkey>hold;xfer;conf;end;</WaitingSoftkey>
-            <EndingSoftkey>repeat;none;none;end;</EndingSoftkey>
-            <DialerPreSoftkey>send;2aB;delete;exit;</DialerPreSoftkey>
-            <DialerCallSoftkey>repeat;2aB;delete;exit;</DialerCallSoftkey>
-            <DialerXferSoftkey>repeat;2aB;delete;exit;</DialerXferSoftkey>
-            <DialerCfwdSoftkey>repeat;2aB;delete;exit;</DialerCfwdSoftkey>
+            <WaitingSoftkey>xfer;accept;reject;end;</WaitingSoftkey>
+            <EndingSoftkey>redial;none;none;end;</EndingSoftkey>
+            <DialerPreSoftkey>send;save;delete;exit;</DialerPreSoftkey>
+            <DialerCallSoftkey>send;2aB;delete;exit;</DialerCallSoftkey>
+            <DialerXferSoftkey>delete;xfer;send;exit;</DialerXferSoftkey>
+            <DialerCfwdSoftkey>send;2aB;delete;exit;</DialerCfwdSoftkey>
             <DesktopClick>{if isset($fanvil_softkey_desktopclick)}{$fanvil_softkey_desktopclick}{else}history;status;none;none;none;{/if}</DesktopClick>
             <DailerClick>none;none;none;none;none;</DailerClick>
             <CallClick>none;none;voldown;volup;none;</CallClick>
