Update the 4.x TLS settings.

--- a/resources/templates/provision/polycom/4.x/{$mac}.cfg
+++ b/resources/templates/provision/polycom/4.x/{$mac}.cfg
@@ -61,7 +61,9 @@
 		sec.srtp.enable="{$polycom_srtp_enable}"
 		sec.srtp.offer="{$polycom_srtp_offer}"
 		sec.srtp.require="{$polycom_srtp_require}"
-		sec.TLS.SIP.strictCertCommonNameValidation="0"
+		{if isset($polycom_root_cert)}sec.TLS.customCaCert.5="{$polycom_root_cert}"{/if}
+		{if isset($polycom_cert_validation)}sec.TLS.SIP.strictCertCommonNameValidation="{$polycom_cert_validation}"{/if}
+		{if isset($polycom_provision_cert_validate)}device.sec.TLS.prov.strictCertCommonNameValidation="{$polycom_provision_cert_validate}"{/if}
 	/>
 	<DEVICE_SETTINGS
 		device.set="1"
