Fix the callBackMode, Add subscribe.expires, and contacts_directory

--- a/resources/templates/provision/polycom/5.x/{$mac}.cfg
+++ b/resources/templates/provision/polycom/5.x/{$mac}.cfg
@@ -242,11 +242,14 @@
 		{if isset($polycom_video_enable)}video.enable="{$polycom_video_enable}"{/if}
 		{if isset($polycom_video_audio_call_mode)}video.callMode.default="{$polycom_video_audio_call_mode}"	{/if}
 		{if isset($polycom_video_audio_toggle)}feature.audioVideoToggle.enabled="{$polycom_video_audio_toggle}"	{/if}
-		msg.mwi.{$row.line_number}.callBackMode="contact"
-		msg.mwi.{$row.line_number}.callBack="{$voicemail_number}"
+		{foreach $lines as $row}
+			msg.mwi.{$row.line_number}.callBackMode="contact"
+			msg.mwi.{$row.line_number}.callBack="{$voicemail_number}"
+		{/foreach}
 		feature.intercom.enable="{$polycom_intercom_enable}"
 		{if isset($polycom_diversion_header)}voIpProt.SIP.header.diversion.enable="{$polycom_diversion_header}"{/if}
-		
+		reg.1.server.1.subscribe.expires="2592000"
+		{if isset($polycom_contacts_directory)}contacts_directory="{$polycom_contacts_directory}/{$domain_name}/"{/if}
 	/>
 	<SOFT_KEYS
 		softkey.1.label="VMTransfer"
