--- a/resources/templates/provision/polycom/4.x/{$mac}.cfg
+++ b/resources/templates/provision/polycom/4.x/{$mac}.cfg
@@ -217,9 +217,12 @@
 		up.headsetMode="1"
 		voice.aec.hf.enable="1"
 		voice.aec.hs.enable="1"
-
-		msg.mwi.{$row.line_number}.callBackMode="contact"
-		msg.mwi.{$row.line_number}.callBack="{$voicemail_number}"
+		{foreach $lines as $row}
+			msg.mwi.{$row.line_number}.callBackMode="contact"
+			msg.mwi.{$row.line_number}.callBack="{$voicemail_number}"
+		{/foreach}
+		reg.1.server.1.subscribe.expires="2592000"
+		{if isset($polycom_contacts_directory)}contacts_directory="{$polycom_contacts_directory}/{$domain_name}/"{/if}
 	/>
 
 	<SOFT_KEYS
