Add line keys, feature key sync, admin password to vp59.

--- a/resources/templates/provision/yealink/vp59/y000000000091.cfg
+++ b/resources/templates/provision/yealink/vp59/y000000000091.cfg
@@ -900,10 +900,15 @@ static.security.user_name.admin =
 static.security.user_name.var = 
 static.security.user_password = 
 
+{if isset($admin_name)}
+static.security.user_name.admin = {$admin_name}
+static.security.user_password = {$admin_name}:{$admin_password}
+{/if}
+
 ###It enables or disables the phone to only accept the certificates in the Trusted Certificates list.
 ###0-Disabled,1-Enabled.
 ###The default value is 1.It takes effect after a reboot.
-static.security.trust_certificates = 
+static.security.trust_certificates = {if $yealink_trust_certificates == "false"}0{elseif $yealink_trust_certificates == "true"}1{/if}
 
 ###It configures the source certificates for the phone to authenticate for TLS connection.
 ###0-Default certificates,1-Custom certificates,2-All certificates.
@@ -975,29 +980,20 @@ features.local_conf.combine_with_one_press.enable=
 ###linekey.X.label = 
 ###linekey.X.extension
 
-###It configures the desired line to apply the key feature.Integer from 1 to 16
-linekey.1.line = 
+{foreach $keys['line'] as $row}
+#Configure Line Key {$row.device_key_id}
+linekey.{$row.device_key_id}.line = {$row.device_key_line}
+linekey.{$row.device_key_id}.value = {$row.device_key_value}
+{if $row.device_key_type == "1" || $row.device_key_type == "16"}
+linekey.{$row.device_key_id}.pickup_value = {$row.device_key_extension}
+{else}
+linekey.{$row.device_key_id}.extension = {$row.device_key_extension}
+{/if}
+linekey.{$row.device_key_id}.type = {$row.device_key_type}
+linekey.{$row.device_key_id}.xml_phonebook =
+linekey.{$row.device_key_id}.label = {$row.device_key_label}
 
-###It configures the value of the line key feature.
-###For example, when setting the key feature to BLF, it configures the number of the monitored user.
-###The default value is blank.
-linekey.1.value = 
-
-###It configures the pickup code for BLF feature or conference ID followed by the # sign for Meet-Me conference feature.
-###It only applies to BLF and Meet-Me conference features.
-###The default value is blank.
-linekey.1.extension
-
-###It configures the key feature for the line key X.
-linekey.1.type = 
-
-###It configures the desired local group/XML group/network group for the line key X.
-###It only applies to the Local Group, XML Group and Network Group features.
-linekey.1.xml_phonebook =
-
-###It configures the label displayed on the LCD screen for each line key.
-###The default value is blank.
-linekey.1.label = 
+{/foreach}
 
 ##########################################################################################
 ##         	               Programmable Key                                             ##               
@@ -1444,11 +1440,12 @@ sip.authentication_for_xsi =
 ##                         Features Sync                                             ##       
 #######################################################################################
 call_waiting.mode =
-features.feature_key_sync.enable=
+features.feature_key_sync.enable = {$yealink_feature_key_sync}
 features.dnd.feature_key_sync.local_processing.enable =
 features.dnd.feature_key_sync.enable =
-features.forward.feature_key_sync.enable=
-features.forward.feature_key_sync.local_processing.enable=
+features.forward.feature_key_sync.enable =
+features.forward.feature_key_sync.local_processing.enable =
+
 #######################################################################################
 ##                              Broadsoft Call Decline                               ##       
 #######################################################################################
