--- a/resources/templates/provision/fanvil/x3u/{$mac}.cfg
+++ b/resources/templates/provision/fanvil/x3u/{$mac}.cfg
@@ -4,9 +4,9 @@
     <Version>2.0000000000</Version>
     <net>
         <WANTYPE>0</WANTYPE>
-        <WANIP>192.168.1.179</WANIP>
-        <WANSubnetMask>255.255.255.0</WANSubnetMask>
-        <WANGateway>192.168.1.1</WANGateway>
+        <WANIP></WANIP>
+        <WANSubnetMask></WANSubnetMask>
+        <WANGateway></WANGateway>
         <DomainName></DomainName>
         <PrimaryDNS>{if isset($dns_server_primary)}{$dns_server_primary}{else}9.9.9.9{/if}</PrimaryDNS>
         <SecondaryDNS>{if isset($dns_server_secondary)}{$dns_server_secondary}{else}208.67.222.222{/if}</SecondaryDNS>
