Added http.cfg.enabled and httpd.cfg.port.

--- a/resources/templates/provision/polycom/3.x/{$mac}.cfg
+++ b/resources/templates/provision/polycom/3.x/{$mac}.cfg
@@ -88,6 +88,8 @@
 		{/foreach}
 	/>
 	<GENERAL
+		httpd.cfg.enabled="1"
+		httpd.cfg.port="80"
 		tcpIpApp.keepalive.tcp.idleTransmitInterval="30" 
 		tcpIpApp.keepalive.tcp.noResponseTrasmitInterval="300" 
 		voIpProt.SIP.specialEvent.checkSync.alwaysReboot="1"
