closed open if statements

--- a/resources/templates/provision/fanvil/x7/{$mac}.cfg
+++ b/resources/templates/provision/fanvil/x7/{$mac}.cfg
@@ -3637,9 +3637,9 @@
         <softkey>
             <SoftkeyMode>0</SoftkeyMode>
             <SoftKeyExitStyle>{if isset($fanvil_softkey_exit)}{$fanvil_softkey_exit}{else}2{/if}</SoftKeyExitStyle>
-            <DesktopSoftkey>{if isset($fanvil_softkey_desktopsoftkey)}{$fanvil_softkey_desktopsoftkey}{else}history;contact;dnd;menu;</DesktopSoftkey>
-            <TalkingSoftkey>{if isset($fanvil_softkey_talkingsoftkey)}{$fanvil_softkey_talkingsoftkey}{else}hold;xfer;conf;end;</TalkingSoftkey>
-            <RingingSoftkey>{if isset($fanvil_softkey_ringingsoftkey)}{$fanvil_softkey_ringingsoftkey}{else}accept;none;forward;reject;</RingingSoftkey>
+            <DesktopSoftkey>{if isset($fanvil_softkey_desktopsoftkey)}{$fanvil_softkey_desktopsoftkey}{else}history;contact;dnd;menu;{/if}</DesktopSoftkey>
+            <TalkingSoftkey>{if isset($fanvil_softkey_talkingsoftkey)}{$fanvil_softkey_talkingsoftkey}{else}hold;xfer;conf;end;{/if}</TalkingSoftkey>
+            <RingingSoftkey>{if isset($fanvil_softkey_ringingsoftkey)}{$fanvil_softkey_ringingsoftkey}{else}accept;none;forward;reject;{/if}</RingingSoftkey>
             <AlertingSoftkey>end;none;none;none;</AlertingSoftkey>
             <XAlertingSoftkey>end;none;none;xfer;</XAlertingSoftkey>
             <ConferenceSoftkey>hold;none;split;end;</ConferenceSoftkey>
@@ -3649,7 +3649,7 @@
             <DialerCallSoftkey>send;2aB;delete;exit;</DialerCallSoftkey>
             <DialerXferSoftkey>delete;xfer;send;exit;</DialerXferSoftkey>
             <DialerCfwdSoftkey>send;2aB;delete;exit;</DialerCfwdSoftkey>
-            <DesktopClick>{if isset($fanvil_softkey_desktopclick)}{$fanvil_softkey_desktopclick}{else}history;status;none;none;none;</DesktopClick>
+            <DesktopClick>{if isset($fanvil_softkey_desktopclick)}{$fanvil_softkey_desktopclick}{else}history;status;none;none;none;{/if}</DesktopClick>
             <DailerClick>pline;nline;none;none;none;</DailerClick>
             <RingingClick>none;none;none;none;none;</RingingClick>
             <CallClick>none;none;voldown;volup;none;</CallClick>
