--- a/resources/templates/provision/polycom/5.x/{$mac}.cfg
+++ b/resources/templates/provision/polycom/5.x/{$mac}.cfg
@@ -242,22 +242,60 @@
 		{if isset($polycom_video_enable)}video.enable="{$polycom_video_enable}"{/if}
 		{if isset($polycom_video_audio_call_mode)}video.callMode.default="{$polycom_video_audio_call_mode}"	{/if}
 		{if isset($polycom_video_audio_toggle)}feature.audioVideoToggle.enabled="{$polycom_video_audio_toggle}"	{/if}
-		msg.mwi.{$row.line_number}.callBackMode="contact"
-		msg.mwi.{$row.line_number}.callBack="{$voicemail_number}"
-		feature.intercom.enable="{$polycom_intercom_enable}"
+		{foreach $lines as $row}
+			msg.mwi.{$row.line_number}.callBackMode="contact"
+			msg.mwi.{$row.line_number}.callBack="{$voicemail_number}"
+		{/foreach}
 		{if isset($polycom_diversion_header)}voIpProt.SIP.header.diversion.enable="{$polycom_diversion_header}"{/if}
-		
+		reg.1.server.1.subscribe.expires="2592000"
+		{if isset($polycom_contacts_directory)}contacts_directory="{$polycom_contacts_directory}/{$domain_name}/"{/if}
+		{if isset($polycom_pagination_enabled)}up.Pagination.enabled="{$polycom_pagination_enabled}"{/if}
 	/>
 	<SOFT_KEYS
 		softkey.1.label="VMTransfer"
 		softkey.1.action="^*99$P1N4$$Trefer$"
 		softkey.1.enable="1"
 		softkey.1.use.active="1"
+		softkey.1.precede="1"
 		efk.efkprompt.1.label="Voice Mail ID to transfer to:"
 		efk.efkprompt.1.status="1"
 		efk.efkprompt.1.type="numeric"
+		{if isset($polycom_intercom_enable)}
+		softkey.2.label="Intercom"
+		softkey.2.action="^*8$P2N4$$Tinvite$"
+		softkey.2.enable="1"
+		softkey.2.use.idle="1"
+		efk.efkprompt.2.label="Enter destination"
+		efk.efkprompt.2.status="1"
+		efk.efkprompt.2.type="numeric"
+		efk.efkprompt.2.userfeedback="visible"
+		efk.efkprompt.2.digitmatching="none"
+		{/if}
+		{if isset($polycom_pickup_enable)}
+		softkey.3.label="Pick up"
+		softkey.3.action="^**$P3N4$$Tinvite$"
+		softkey.3.enable="1"
+		softkey.3.use.idle="1"
+		efk.efkprompt.3.label="Enter ext to intercept"
+		efk.efkprompt.3.status="1"
+		efk.efkprompt.3.type="numeric"
+		efk.efkprompt.3.userfeedback="visible"
+		efk.efkprompt.3.digitmatching="none"
+		{/if}
 		{if isset($polycom_softkey_do_not_disturb)}softkey.feature.doNotDisturb="{$polycom_softkey_do_not_disturb}"{/if}
 		{if isset($polycom_softkey_forward)}softkey.feature.forward="{$polycom_softkey_forward}"{/if}
+		{if isset($polycom_softkey_newcall)}softkey.feature.newcall="{$polycom_softkey_newcall}"{/if}
+		{if isset($polycom_softkey_directories)}softkey.feature.directories="{$polycom_softkey_directories}"{/if}
+		{if isset($polycom_basic_call_management_redundant)}
+		softkey.feature.basicCallManagement.redundant="{$polycom_basic_call_management_redundant}"
+		efk.softkey.alignleft="1"
+		{/if}
+	/>
+	<HOME_SCREEN
+		{if isset($polycom_homescreen_do_not_disturb)}homeScreen.doNotDisturb.enable="{$polycom_homescreen_do_not_disturb}"{/if}
+		{if isset($polycom_homescreen_forward)}homeScreen.forward.enable="{$polycom_homescreen_forward}"{/if}
+		{if isset($polycom_homescreen_directories)}homeScreen.directories.enable="{$polycom_homescreen_directories}"{/if}
+		homeScreen.intercom.enable="0"
 	/>
 	<USB 
 		feature.callRecording.enabled="0"
@@ -274,10 +312,6 @@
 		{if isset($polycom_dns_alt_server)} 
 		device.dns.altSrvAddress.set="1"
 		device.dns.altSrvAddress="{$polycom_dns_alt_server}"
-		{/if}
-		{if isset($polycom_boot_server_option)}
-		device.dhcp.bootSrvUseOpt.set="1"
-		device.dhcp.bootSrvUseOpt="{$polycom_boot_server_option}"
 		{/if}
 		{if isset($polycom_boot_server_option)}
 		device.dhcp.bootSrvUseOpt.set="1"
