--- a/resources/templates/provision/yealink/t46g/y000000000028.cfg
+++ b/resources/templates/provision/yealink/t46g/y000000000028.cfg
@@ -981,7 +981,13 @@ phone_setting.backlight_time = {$yealink_backlight_time}
 #######################################################################################
 ##                                   Wallpaper                                       ##
 #######################################################################################
+# Resolution: 480 x 272
+# Max Size: 1MB
+
+# Confgure the url to download an image from
 wallpaper_upload.url = {$yealink_t46g_wallpaper}
+
+# Setting yealink_t46g_wallpaper_filename with the filename will make that wallpaper active.
 {if isset($yealink_t46g_wallpaper_filename)}
 phone_setting.backgrounds =  Config:{$yealink_t46g_wallpaper_filename}
 {else}
