--- a/resources/templates/provision/yealink/t46g/y000000000028.cfg
+++ b/resources/templates/provision/yealink/t46g/y000000000028.cfg
@@ -981,13 +981,13 @@ phone_setting.backlight_time = {$yealink_backlight_time}
 #######################################################################################
 ##                                   Wallpaper                                       ##
 #######################################################################################
-# Resolution: 480 x 272
-# Max Size: 1MB
+## Resolution: 480 x 272
+## Max Size: 1MB
 
-# Confgure the url to download an image from
+## Confgure the url to download an image from
 wallpaper_upload.url = {$yealink_t46g_wallpaper}
 
-# Setting yealink_t46g_wallpaper_filename with the filename will make that wallpaper active.
+## Setting yealink_t46g_wallpaper_filename with the filename will make that wallpaper active.
 {if isset($yealink_t46g_wallpaper_filename)}
 phone_setting.backgrounds =  Config:{$yealink_t46g_wallpaper_filename}
 {else}
@@ -1285,6 +1285,8 @@ linekey.27.label =
 features.block_linekey_in_menu.enable =
 features.shorten_linekey_label.enable =
 features.flash_url_dsskey_led.enable =
+
+## 0-Default, 1-Extended
 features.config_dsskey_length = {$yealink_dsskey_length}
 phone_setting.page_tip =
 features.keep_switch_page_key.enable=
