Yealink T54w Add missing parameter and variable

--- a/resources/templates/provision/yealink/t54w/y000000000096.cfg
+++ b/resources/templates/provision/yealink/t54w/y000000000096.cfg
@@ -834,6 +834,8 @@ remote_phonebook.data.4.url =  {$yealink_remote_phonebook_4_url}
 remote_phonebook.data.5.name = {$yealink_remote_phonebook_5_name}
 remote_phonebook.data.5.url = {$yealink_remote_phonebook_5_url}
 
+features.remote_phonebook.enable = {$yealink_remote_phonebook_enable}
+
 
 #######################################################################################
 ##                                 LDAP                                              ##       
@@ -1139,7 +1141,7 @@ features.no_answer_code=
 #######################################################################################  
 ##                                  DND                                              ##  
 #######################################################################################
-features.dnd.allow=
+features.dnd.allow= {$yealink_dnd_allow}
 features.dnd_mode=
 features.dnd.enable=
 
