--- a/resources/templates/provision/yealink/cp960/y000000000073.cfg
+++ b/resources/templates/provision/yealink/cp960/y000000000073.cfg
@@ -486,7 +486,7 @@ local_time.interval =
 local_time.summer_time = {$yealink_summer_time}
 
 #Configure the DST type when the DST feature is enabled; 0-By Date (default), 1-By Week;
-local_time.dst_time_type =
+local_time.dst_time_type = {$yealink_dst_type}
 
 #Configure the start time of DST. The default value is 1/1/0.
 #If the DST type is configured as By Date, the value format is Month/Day/Hour. For example, the value 5/20/10 means the start time is at 10:00 on May 20.
