--- a/resources/templates/provision/yealink/t58a/{$mac}.cfg
+++ b/resources/templates/provision/yealink/t58a/{$mac}.cfg
@@ -2955,7 +2955,7 @@ local_time.ntp_server2 = {$ntp_server_secondary}
 
 ##It configures the update interval (in seconds) when using the NTP server.
 ##The default value is 1000.Integer from 15 to 86400
-local_time.interval = 
+local_time.interval = {$yealink_time_update}
 
 ##It enables or disables daylight saving time (DST) feature.
 ##0-Disabled,1-Enabled,2-Automatic.
@@ -2965,17 +2965,17 @@ local_time.summer_time = {$yealink_summer_time}
 ##It configures the way DST works when DST feature is enabled.
 ##0-DST By Date ,1-DST By Week.
 ##The default value is 0.
-local_time.dst_time_type = 
+local_time.dst_time_type = {$yealink_dst_type}
 
 ##It configures the start time of the DST.
 ##Value formats are:Month/Day/Hour (for By Date),Month/ Day of Week/ Day of Week Last in Month/ Hour of Day (for By Week)
 ##The default value is 1/1/0.
-local_time.start_time = 
+local_time.start_time = {$yealink_time_zone_start_time}
 
 ##It configures the end time of the DST.
 ##Value formats are:Month/Day/Hour (for By Date),Month/ Day of Week/ Day of Week Last in Month/ Hour of Day (for By Week)
 ##The default value is 12/31/23.
-local_time.end_time = 
+local_time.end_time = {$yealink_time_zone_end_time}
 
 ##It configures the offset time (in minutes).
 ##The default value is blank.Integer from -300 to 300
@@ -2991,7 +2991,7 @@ local_time.date_format = {$yealink_date_format}
 ##It enables or disables the phone to update time with the offset time obtained from the DHCP server.
 ##It is only available to offset from GMT 0.0-Disabled,1-Enabled.
 ##The default value is 0.
-local_time.dhcp_time = 
+local_time.dhcp_time = {$yealink_dhcp_time}
 
 ##It configures the phone to obtain time from NTP server or manual settings.0-Manual,1-NTP
 ##The default value is 1.
