--- a/resources/templates/provision/yealink/vp59/y000000000091.cfg
+++ b/resources/templates/provision/yealink/vp59/y000000000091.cfg
@@ -1362,24 +1362,24 @@ features.intercom.headset_prior.enable =
 #######################################################################################
 ##                                  Time&Date                                        ##       
 #######################################################################################
-auto_dst.url =
+auto_dst.url = {$yealink_auto_dst_url}
 local_time.manual_time_enable =
 local_time.manual_ntp_srv_prior =
-local_time.time_format =
-local_time.date_format =
-local_time.dhcp_time =
+local_time.time_format = {$yealink_time_format}
+local_time.date_format = {$yealink_date_format}
+local_time.dhcp_time = {$yealink_dhcp_time}
 
-local_time.summer_time =
-local_time.dst_time_type =
-local_time.start_time =
-local_time.end_time =
-local_time.offset_time =
+local_time.summer_time = {$yealink_summer_time}
+local_time.dst_time_type = {$yealink_dst_type}
+local_time.start_time = {$yealink_time_zone_start_time}
+local_time.end_time = {$yealink_time_zone_end_time}
+local_time.offset_time = {$yealink_offset_time}
 local_time.interval =
 
-local_time.ntp_server1 =
-local_time.ntp_server2 =
-local_time.time_zone =
-local_time.time_zone_name =
+local_time.ntp_server1 = {$ntp_server_primary}
+local_time.ntp_server2 = {$ntp_server_secondary}
+local_time.time_zone = {$yealink_time_zone}
+local_time.time_zone_name = {$yealink_time_zone_name}
 
 
 #######################################################################################
