vmtransfer softkey position variable created

--- a/resources/templates/provision/polycom/5.x/{$mac}.cfg
+++ b/resources/templates/provision/polycom/5.x/{$mac}.cfg
@@ -256,7 +256,10 @@
 		softkey.1.action="^*99$P1N4$$Trefer$"
 		softkey.1.enable="1"
 		softkey.1.use.active="1"
-		softkey.1.precede="1"
+		{if isset($polycom_softkey_1_precede)}
+		softkey.1.precede="{$polycom_softkey_1_precede}"
+		{else}softkey.1.precede="0"
+		{/if}
 		efk.efkprompt.1.label="Voice Mail ID to transfer to:"
 		efk.efkprompt.1.status="1"
 		efk.efkprompt.1.type="numeric"
