Polycom template add Ring classes and alert info support

--- a/resources/templates/provision/polycom/5.x/{$mac}.cfg
+++ b/resources/templates/provision/polycom/5.x/{$mac}.cfg
@@ -333,4 +333,20 @@
 		device.dhcp.dhcpVlanDiscUseOpt="{$polycom_dhcp_vlan_discovery}"
 		{/if}
 	/>
+	
+	<RINGTONES>
+		{foreach $polycom_ring_class as $class} 
+		se.rt.{$class}.name="{$polycom_ring_class_{$class}_name}" 
+		se.rt.{$class}.ringer="{$polycom_ring_class_{$class}_ringer}" 
+		se.rt.{$class}.type="{$polycom_ring_class_{$class}_type}" 
+		{/foreach} 
+
+		voIpProt.SIP.alertInfo.1.class="{$polycom_alertinfo_1_class}"
+		voIpProt.SIP.alertInfo.1.value="{$polycom_alertinfo_1_value}"
+		voIpProt.SIP.alertInfo.2.class="{$polycom_alertinfo_2_class}"
+		voIpProt.SIP.alertInfo.2.value="{$polycom_alertinfo_2_value}"
+		voIpProt.SIP.alertInfo.3.class="{$polycom_alertinfo_3_class}"
+		voIpProt.SIP.alertInfo.3.value="{$polycom_alertinfo_3_value}"
+	/>
+	
 </PHONE>
