Remove wrong closing angle bracket

--- a/resources/templates/provision/polycom/5.x/{$mac}.cfg
+++ b/resources/templates/provision/polycom/5.x/{$mac}.cfg
@@ -334,7 +334,7 @@
 		{/if}
 	/>
 	
-	<RINGTONES>
+	<RINGTONES
 		{foreach $polycom_ring_class as $class} 
 		se.rt.{$class}.name="{$polycom_ring_class_{$class}_name}" 
 		se.rt.{$class}.ringer="{$polycom_ring_class_{$class}_ringer}" 
