Add polycom_subscribe_expires to the 5.x template.

--- a/resources/templates/provision/polycom/5.x/{$mac}.cfg
+++ b/resources/templates/provision/polycom/5.x/{$mac}.cfg
@@ -247,7 +247,7 @@
 			msg.mwi.{$row.line_number}.callBack="{$voicemail_number}"
 		{/foreach}
 		{if isset($polycom_diversion_header)}voIpProt.SIP.header.diversion.enable="{$polycom_diversion_header}"{/if}
-		reg.1.server.1.subscribe.expires="2592000"
+		reg.1.server.1.subscribe.expires="{$polycom_subscribe_expires}"
 		{if isset($polycom_contacts_directory)}contacts_directory="{$polycom_contacts_directory}/{$domain_name}/"{/if}
 		{if isset($polycom_pagination_enabled)}up.Pagination.enabled="{$polycom_pagination_enabled}"{/if}
 	/>
