Add polycom_subscribe_expires to the 4.x template.

--- a/resources/templates/provision/polycom/4.x/{$mac}.cfg
+++ b/resources/templates/provision/polycom/4.x/{$mac}.cfg
@@ -221,7 +221,7 @@
 			msg.mwi.{$row.line_number}.callBackMode="contact"
 			msg.mwi.{$row.line_number}.callBack="{$voicemail_number}"
 		{/foreach}
-		reg.1.server.1.subscribe.expires="2592000"
+		reg.1.server.1.subscribe.expires="{$polycom_subscribe_expires}"
 		{if isset($polycom_contacts_directory)}contacts_directory="{$polycom_contacts_directory}/{$domain_name}/"{/if}
 	/>
 
