--- a/resources/templates/provision/yealink/t58v/y000000000058.cfg
+++ b/resources/templates/provision/yealink/t58v/y000000000058.cfg
@@ -1405,7 +1405,7 @@ custom_softkey_talking.url =
 #######################################################################################
 ###It configures the access URL of the firmware file.
 ###The default value is blank.It takes effect after a reboot.
-static.firmware.url = {$yealink_firmware_url}/{$yealink_firmware_t56a}
+static.firmware.url = {$yealink_firmware_url}/{$yealink_firmware_t58v}
 
 
 #######################################################################################
