add android apps disable

--- a/resources/templates/provision/yealink/cp960/y000000000073.cfg
+++ b/resources/templates/provision/yealink/cp960/y000000000073.cfg
@@ -1629,3 +1629,8 @@ directory_setting.url = https://{if isset($http_auth_username)}{$http_auth_usern
 #######################################################################################
 #Before using this parameter, you should store the desired firmware (x.71.x.x.rom) to the provisioning server.
 firmware.url = {$yealink_firmware_url}/{$yealink_firmware_cp960}
+
+#######################################################################################
+##                      APP                                                         ##       
+#######################################################################################
+{foreach $yealink_app_unavailable as $value}app.unavailable = {$value}{"\n"}{/foreach}
