--- a/resources/templates/provision/yealink/t56a/y000000000056.cfg
+++ b/resources/templates/provision/yealink/t56a/y000000000056.cfg
@@ -1586,3 +1586,8 @@ features.doorphone.%d.phone_number =
 features.doorphone.%d.send_audio =
 features.doorphone.%d.send_video =
 features.doorphone.%d.unlock_pin =
+
+#######################################################################################
+##                      APP                                                         ##       
+#######################################################################################
+{foreach $yealink_app_unavailable as $value}app.unavailable = {$value}{"\n"}{/foreach}
