add android apps disable

--- a/resources/templates/provision/yealink/t58a/y000000000058.cfg
+++ b/resources/templates/provision/yealink/t58a/y000000000058.cfg
@@ -1566,3 +1566,8 @@ features.power_saving.intelligent_mode =
 features.blf_active_backlight.enable =
 features.intercom.headset_prior.enable =
 expansion_module.1.key.1.extension =
+
+#######################################################################################
+##                      APP                                                         ##       
+#######################################################################################
+{foreach $yealink_app_unavailable as $value}app.unavailable = {$value}{"\n"}{/foreach}
