add android apps disable

--- a/resources/templates/provision/yealink/vp59/y000000000091.cfg
+++ b/resources/templates/provision/yealink/vp59/y000000000091.cfg
@@ -1534,7 +1534,7 @@ features.default_layout =
 #######################################################################################
 app.install_url = 
 app.uninstall =
-app.unavailable =
+{foreach $yealink_app_unavailable as $value}app.unavailable = {$value}{"\n"}{/foreach}
 app.autorun =
 custom.static.system_mode =
 custom.static.system_mode_selection =
