--- a/resources/templates/provision/polycom/5.x/phoneMAC.cfg
+++ b/resources/templates/provision/polycom/5.x/phoneMAC.cfg
@@ -173,7 +173,6 @@
 		{/if}
 		feature.enhancedFeatureKeys.enabled="1"
 		{assign var=attendant_list_position value=1}
-		{assign var=speed_dial_index value=1}
 		{foreach $keys["line"] as $row}
 			{if $row.device_key_type == "automata" || $row.device_key_type == "normal"}
 				lineKey.{$position}.category="BLF"
@@ -188,11 +187,6 @@
 				{for $var=1 to $row.device_key_value}
 					{$position=$position+1}
 				{/for}
-			{elseif $row.device_key_type == "SpeedDial"}
-				lineKey.{$position}.category="SpeedDial"
-				lineKey.{$position}.index="{$speed_dial_index}"
-				{$speed_dial_index=$speed_dial_index+1}
-				{$position=$position+1}
 			{else}
 				{if $row.device_key_type != "line"}
 					{if $row.device_key_type == "URL"}
@@ -208,7 +202,6 @@
 	<MULTICAST_PAGING
 		ptt.pageMode.enable="{$polycom_page_enable}"
 		ptt.pageMode.group.1.label="Page All"
-		ptt.volume = "0"
 	/>
 	<REMOTE_PACKET_CAPTURE
 		diags.pcap.enabled="0"
@@ -268,8 +261,9 @@
 			msg.mwi.{$row.line_number}.callBack="{$voicemail_number}"
 		{/foreach}
 		{if isset($polycom_diversion_header)}voIpProt.SIP.header.diversion.enable="{$polycom_diversion_header}"{/if}
-		reg.1.server.1.subscribe.expires="3600"
+		reg.1.server.1.subscribe.expires="2592000"
 		{if isset($polycom_contacts_directory)}contacts_directory="{$polycom_contacts_directory}/{$domain_name}/"{/if}
+		up.Pagination.enabled="0"
 		lineKey.reassignment.enabled="1"
 	/>
 	<SOFT_KEYS
@@ -302,17 +296,6 @@
 		efk.efkprompt.3.type="numeric"
 		efk.efkprompt.3.userfeedback="visible"
 		efk.efkprompt.3.digitmatching="none"
-		{/if}
-		{if isset($polycom_speeddial_enable)}
-		softkey.4.label="Speed Dial"
-		softkey.4.action="^*0$P4N4$$Tinvite$"
-		softkey.4.enable="1"
-		softkey.4.use.idle="1"
-		efk.efkprompt.4.label="Enter Speed Dial Code"
-		efk.efkprompt.4.status="1"
-		efk.efkprompt.4.type="numeric"
-		efk.efkprompt.4.userfeedback="visible"
-		efk.efkprompt.4.digitmatching="none"
 		{/if}
 		{if isset($polycom_softkey_do_not_disturb)}softkey.feature.doNotDisturb="{$polycom_softkey_do_not_disturb}"{/if}
 		{if isset($polycom_softkey_forward)}softkey.feature.forward="{$polycom_softkey_forward}"{/if}
