updated templates to include screensaver.wait_time on all supported devices

--- a/resources/templates/provision/yealink/t42s/y000000000067.cfg
+++ b/resources/templates/provision/yealink/t42s/y000000000067.cfg
@@ -1403,7 +1403,7 @@ features.blf_active_backlight.enable=
 screensaver.display_clock.enable=
 screensaver.clock_move_interval=
 screensaver.picture_change_interval=
-screensaver.wait_time=
+screensaver.wait_time= {$yealink_screensaver_wait}
 screensaver.xml_browser.url=
 
 
