--- a/resources/templates/provision/yealink/vp59/y000000000091.cfg
+++ b/resources/templates/provision/yealink/vp59/y000000000091.cfg
@@ -1297,7 +1297,7 @@ features.power_saving.office_hour.thursday =
 features.power_saving.office_hour.friday  =
 features.power_saving.office_hour.saturday  =
 features.power_saving.office_hour.sunday =
-screensaver.wait_time=
+screensaver.wait_time= {$yealink_screensaver_wait}
 
 ##V83 Add
 features.power_saving.power_led_flash.off_time=
