--- a/resources/templates/provision/yealink/t4x/y000000000116.cfg
+++ b/resources/templates/provision/yealink/t4x/y000000000116.cfg
@@ -1401,7 +1401,7 @@ features.blf_active_backlight.enable=
 screensaver.display_clock.enable=
 screensaver.clock_move_interval=
 screensaver.picture_change_interval=
-screensaver.wait_time=
+screensaver.wait_time= {$yealink_screensaver_wait}
 screensaver.xml_browser.url=
 
 
