Add yealink_voice_cng, yealink_voice_vad, yealink_fwd_allow and yealink_dnd_allow.

--- a/resources/templates/provision/yealink/t41s/y000000000068.cfg
+++ b/resources/templates/provision/yealink/t41s/y000000000068.cfg
@@ -536,8 +536,8 @@ voice.jib.wifi.adaptive=
 ##                                   Echo Cancellation                               ##
 #######################################################################################
 voice.echo_cancellation =
-voice.cng =
-voice.vad =
+voice.cng = {$yealink_voice_cng}
+voice.vad = {$yealink_voice_vad}
 
 
 ################################################################
@@ -981,7 +981,7 @@ default_input_method.xml_browser_input_screen=
 #######################################################################################  
 ##                                  Forward                                          ##  
 #######################################################################################  
-features.fwd.allow=
+features.fwd.allow = {$yealink_dnd_allow}
 features.fwd_mode=
 forward.no_answer.enable=
 forward.busy.enable=
@@ -1006,9 +1006,9 @@ features.forward_call_popup.enable=
 #######################################################################################  
 ##                                  DND                                              ##  
 #######################################################################################
-features.dnd.allow=
-features.dnd_mode=
-features.dnd.enable=
+features.dnd.allow = {$yealink_dnd_allow}
+features.dnd_mode =
+features.dnd.enable =
 
 features.dnd.off_code = *79
 features.dnd.on_code = *78
