--- a/resources/templates/provision/yealink/t22p/{$mac}.cfg
+++ b/resources/templates/provision/yealink/t22p/{$mac}.cfg
@@ -1775,7 +1775,7 @@ account.6.precondition =
 account.6.subscribe_register =
 
 #Enable or disable the phone to subscribe the message waiting indicator; 0-Disabled (default), 1-Enabled;
-account.6.subscribe_mwi = 0
+account.6.subscribe_mwi = {$yealink_subscribe_mwi}
 
 #Configure MWI subscribe expiry time (in seconds). It ranges from 0 to 84600, the default value is 3600.
 account.6.subscribe_mwi_expires = 3600
