extension blf key flash on incoming calls

--- a/resources/templates/provision/yealink/t54w/y000000000096.cfg
+++ b/resources/templates/provision/yealink/t54w/y000000000096.cfg
@@ -242,6 +242,7 @@ static.auto_provision.connect.keep_alive =
 static.auto_provision.config_version.mac=
 static.auto_provision.config_version.com=
 
+blf.enhanced.callin.enable=
 
 #######################################################################################
 ##                                   Autop PNP                                       ##       
