--- a/.gitignore
+++ b/.gitignore
@@ -9,10 +9,9 @@ secure/*.sqlite
 
 *.php~
 
+app/yealink/resources/firmware/*
 app/provision/logs/
 app/provision/calls/
 app/provision/corefiles/
 app/provision/directories/
 app/provision/phoneconfigs/
-app/email_queue/
-app/device_logs/
